Refactoring and add local implementaion